name:                wreath
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            EDSL for designing lighted wreath
-- A longer description of the package.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Robert Grudem
maintainer:          bobgru@hotmail.com

-- A copyright notice.
-- copyright:           

-- category:            

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  README.md
                   , examples/comparison.hs
                   , examples/design.hs
                   , examples/lampWalk.hs
                   , examples/simulation.hs
cabal-version:       >=1.10


library
  exposed-modules:     Wreath
                     , Wreath.Walk
  other-extensions:    NoMonomorphismRestriction
  build-depends:       base >=4.5
                     , diagrams-lib >=1.0
                     , diagrams-svg >=1.0
  hs-source-dirs:      src
  default-language:    Haskell2010


Executable simulation
  Build-Depends:  base
                , diagrams-lib
                , diagrams-svg
                , wreath
  Main-Is:        simulation.hs
  hs-source-dirs:      examples
  default-language:    Haskell2010

Executable design
  Build-Depends:  base
                , diagrams-lib
                , diagrams-svg
                , wreath
  Main-Is:        design.hs
  hs-source-dirs:      examples
  default-language:    Haskell2010

Executable comparison
  Build-Depends:  base
                , diagrams-lib
                , diagrams-svg
                , wreath
  Main-Is:        comparison.hs
  hs-source-dirs:      examples
  default-language:    Haskell2010

Executable lampWalk
  Build-Depends:  base
                , diagrams-lib
                , diagrams-svg
                , wreath
  Main-Is:        lampWalk.hs
  hs-source-dirs:      examples
  default-language:    Haskell2010

Test-Suite walk-properties
  Type:           exitcode-stdio-1.0
  Main-Is:        walkTests.hs
  Buildable:      True
  Build-Depends:  base
                , QuickCheck
                , wreath
  hs-source-dirs: tests/qc
  default-language:    Haskell2010


